--- a/env.yaml
+++ b/env.yaml
@@ -19,22 +19,22 @@ dependencies:
 - cpuonly=2.0
 - cryptography=38.0.1
 - cycler=0.11.0
-- eigen=3.2.7
+- eigen
 - fftw=3.3.9
 - filelock=3.6.0
 - fonttools=4.25.0
 - freetype=2.12.1
 - glib=2.69.1
-- gst-plugins-base=1.18.5
-- gstreamer=1.18.5
+- gst-plugins-base
+- gstreamer=1.22.3
 - hdf5=1.12.1
 - huggingface_hub=0.2.1
-- icc_rt=2022.1.0
-- icu=58.2
+- icc_rt
+- icu
 - idna=3.4
 - importlib-metadata=4.11.3
 - importlib_metadata=4.11.3
-- intel-openmp=2021.4.0
+- intel-openmp
 - joblib=1.1.1
 - jpeg=9e
 - kiwisolver=1.4.2
@@ -50,7 +50,7 @@ dependencies:
 - libpng=1.6.37
 - libprotobuf=3.20.1
 - libtiff=4.4.0
-- libuv=1.40.0
+- libuv
 - libvorbis=1.3.7
 - libwebp=1.2.4
 - libwebp-base=1.2.4
@@ -59,10 +59,10 @@ dependencies:
 - lz4-c=1.9.3
 - matplotlib=3.5.2
 - matplotlib-base=3.5.2
-- mkl=2021.4.0
-- mkl-service=2.4.0
-- mkl_fft=1.3.1
-- mkl_random=1.2.2
+- mkl
+- mkl-service
+- mkl_fft
+- mkl_random
 - munkres=1.1.4
 - numexpr=2.8.3
 - numpy=1.23.3
@@ -109,11 +109,11 @@ dependencies:
 - typing_extensions=4.3.0
 - tzdata=2022e
 - urllib3=1.26.12
-- vc=14.2
-- vs2015_runtime=14.27.29016
+- vc
+- vs2015_runtime
 - wheel=0.37.1
-- win_inet_pton=1.1.0
-- wincertstore=0.2
+- win_inet_pton
+- wincertstore
 - xz=5.2.6
 - yaml=0.2.5
 - zipp=3.8.0
